# MagniPOC

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.control_station  README.md  frames_2026-01-08_20.57.25.gv  frames_2026-01-08_21.29.26.gv  frames_2026-01-16_23.15.28.gv
.config/dbus/: bluezuser.conf
.devcontainer/: Dockerfile
.devcontainer/cpu-simulation/: Dockerfile  devcontainer.json
.devcontainer/gpu-simulation/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: ROS2Architect.agent.md  ROS2Developer.agent.md
.github/prompts/: planNewFeatureImplementation.prompt.md
.github/skills/create-github-issue/: SKILL.md
.github/workflows/: build-control-station.yml  build.yaml  deploy.yaml  mapping-smoke-test.yml
.rviz2/: basicconf.rviz
ansible/: ansible.cfg  requirements.yml
ansible/inventories/: hosts.ini
ansible/playbooks/: deploy_control_station.yml  deploy_magnipoc.yml  installsixadservice.yml  vars.yml
architecture/: baseline_architecture.md  cartographer_design.md  ydlidar_integration_design.md
architecture/adr/: 002-cartographer-2d.md  003-integrate-ydlidar-real-lidar.md
scripts/: build-simulation.sh  deploy-control-station.sh  launch-teleop-joy.sh  launch-webots-simulation.sh  run-container.sh  run-integration-test.sh  run-magni-container.sh  run-mapping-smoke-test.sh  run-teleop-keyboard.sh
src/magni_bringup/: package.xml  setup.cfg  setup.py
src/magni_bringup/config/: basicconf.rviz
src/magni_bringup/launch/: magni_bringup.launch.py
src/magni_control_station/: package.xml  setup.py
src/magni_control_station/launch/: control_station.launch.py
src/magni_description/launch/: description.launch.py
src/magni_description/urdf/: magni.control.xacro  magni.transmission.xacro  magni.urdf.xacro
src/magni_description/urdf/sensors/: raspi_camera.xacro  sonar_hc-sr04.xacro  ur50_lidar.xacro  ur_c1_lidar.xacro
src/magni_integration_tests/: CMakeLists.txt  package.xml
src/magni_integration_tests/resources/: README.md
src/magni_integration_tests/tests/: test_mapping_integration.py  test_mapping_launch.py
src/magni_mapping/: CMakeLists.txt  README.md  package.xml
src/magni_mapping/config/: magni_2d.lua
src/magni_mapping/launch/: mapping.launch.py
src/magni_mapping/params/: cartographer_params.yaml
src/magni_mapping/test/: test_cartographer_config.py
src/magni_teleop/: CMakeLists.txt  package.xml
src/magni_teleop/include/magni_teleop/: magni_teleop.hpp
src/magni_teleop/launch/: joy_teleop.launch.py
src/magni_webots/: CMakeLists.txt  magni_webots.xml  package.xml
src/magni_webots/include/magni_webots/: NodeRemover.hpp
src/magni_webots/launch/: magni_sim_bringup.launch.py  magni_spawn.launch.py
src/magni_webots/resource/: magni_wb.urdf.xacro  node_remover.urdf.xacro
src/magni_webots/src/: NodeRemover.cpp
src/magni_webots/worlds/: break_room.wbt
