<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magni_control_station</name>
  <version>0.0.0</version>
  <description>Control station that launches teleop, mapping and RViz</description>
  <maintainer email="julioandres.bp@outlook.com">julio</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>magni_description</exec_depend>
  <exec_depend>magni_teleop</exec_depend>
  <exec_depend>magni_mapping</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
