<?xml version="1.0"?>
<package format="3">
  <name>magni_mapping</name>
  <version>0.0.0</version>
  <description>Cartographer 2D integration for MAGNI (LIDAR + Odometry)</description>
  <maintainer email="julioandres.bp@outlook.com">julio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
