<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magni_webots</name>
  <version>0.0.1</version> <!-- Updated version -->
  <description>Package to simulate Magni robot in Webots using an existing world and magni_description.</description> <!-- Updated description -->
  <maintainer email="julioandres.bp@outlook.com">julio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>webots_ros2_driver</depend>
  <depend>magni_description</depend>
  <depend>magni_control_station</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
